1.4.2 (???)
	* Add a compile-time option to define a static location to look
	  for a configuration file. Will ALWAYS override defconfig values
	  if it is present, so beware.
	* Fixed some eerie race conditions that prevented writefile() from
	  writing a full file all the time. (jilles)
	* Don't write rcfiles if they already exist. (i.e., lost account
	  holders recreating their accounts.

1.4.1 (2004/02/13)
	* Don't explicitly unlock the lock file before fclosing it;
	  this creates a race condition where we might not have finished
	  writing to /dgl-login before we tell people that they can write
	  to it again.
	* Make sure writefile does not get called when using it as a
	  password prompt for new-users
	* Allow user to change his or her email address in the console.
	* Remove some useless cruft in ttywait() [ttyplay.c]

1.4 (2004/02/03)
	* Major cleanups - remove most uses of strcpy() and strcat()
	* A number of virus bugs have been fixed regarding getopt() and
	  other minor issues.
	* Add support for mailing users while they are playing.
	  [nh343-simple_mail.diff is needed]
	* Add a confirmation to the change password screen so people like me
	  don't change their passwords by accident all the time.
	* Remove many unused variables and make some functions void because
	  they don't return anything.
	* Add some function prototypes in dgamelaunch.c to quell warnings.
	* Make some vars unsigned to quell warnings.
	* 'capital letter. experimental' section made irrelevant by use of
	  tolower(3) around getch()
	* Change big conditional block to use a switch.
	* Replace a global with a static variable within the function.
	* Replace the giant size 64000 static buffers with dynamically
	  allocated structs
	* Checking for colons in user fields is made simpler using strstr(3)
	* Allow page up and page down on the watch games menu
	* Merge BSD compatibility patches
	* All licenses in source code mentioned in COPYING